test/parse.stderr
^error: ignoring unrecognized line 'invalid line' in file '[^']*/parse\.rule' at line #1$
^error: command 'no command placeholder' does not contain a placeholder for rule 'missing' in file '[^']*/parse\.rule' at line #2$
^error: ignoring unrecognized line '\$: invalid name character' in file '[^']*/parse\.rule' at line #3$
^warning: option 'invalid' is unknown in file '[^']*/parse\.rule' at line #5$
^warning: option 'interval' has a non-integer value 'a' for rule 'dummy' in file '[^']*/parse\.rule' at line #6$
^warning: option 'keep' has a non-integer value 'b' for rule 'dummy' in file '[^']*/parse\.rule' at line #7$
^dummy: should backup with \[interval=86400\]\[keep=7\]$
^$
